New Commit By Rohit

--- a/index.html
+++ b/index.html
@@ -1,11 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DenyTech</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/style.css" />
+    <title>DentyTech</title>
+  </head>
+  <body>
+    <div id="main">
+      <div id="nav">
+        <div id="nav-1">
+          <h3>Menu</h3>
+          <i class="ri-menu-5-line"></i>
+        </div>
+        <div id="nav-2">
+            <img id="logo" src="/microscope.png" alt="">
+            <h1>DentyTech</h1>
+        </div>
+        <div id="nav-3">
+          <button>Log In</button>
+          <button id="btn-2" style="background-color: orangered; border: none;">Sign Up</button>
+        </div>
+      </div>
+      <div id="hero">
+
+          <h1>Our Advantages</h1>
+          <img id="img1" src="https://plus.unsplash.com/premium_photo-1669704098750-7cd22c35422b?q=80&w=388&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+          <img id="img2" src="https://images.unsplash.com/photo-1604514628550-37477afdf4e3?w=1000&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bW9kZWxzfGVufDB8fDB8fHww" alt="">
+          <img id="img3" src="https://images.unsplash.com/photo-1556347961-f9521a88cb8a?w=1000&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bW9kZWxzfGVufDB8fDB8fHww" alt="">
+          <img id="img4" src="https://images.unsplash.com/photo-1622396636133-ba43f812bc35?w=1000&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTV8fG1vZGVsc3xlbnwwfHwwfHx8MA%3D%3D" alt="">
+          <img id="img-up" src="https://images.unsplash.com/photo-1581338834647-b0fb40704e21?w=1000&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fG1vZGVsc3xlbnwwfHwwfHx8MA%3D%3D" alt="">
+          <i class="ri-settings-3-line"></i>
+          <p id="features">Advanced Technology</p>
+      </div>
+        <div id="end">
+            <h5 id="btm-left">Your Smile, Our Passion</h5>
+            <i id="down" class="ri-arrow-down-line"></i>
+            <div id="btm-right">
+                <i class="ri-instagram-line"></i>
+                <i class="ri-youtube-line"></i>
+                <i class="ri-facebook-box-fill"></i>
+            </div>
+            <p id="btm-r-p">Best Start Up of 2023</p>
+        </div>
+    </div>
+  </body>
 </html>
